@@ -197,6 +197,7 @@ SVN
 -bug#0002141: cacti.sql missing BTREE PRIMARY KEY for poller_output 
 -bug#0002146: Utilities -> View Log File -> refresh does not work
 -bug#0002150: usort_data_query_index() is broken -> graph order for hosts with data query sort option fails
+-bug#0002151: When building HTML forms with sub_checkbox on_change parameter is not used 
 -bug#0002152: Issue with filter on graphs_new.php
 -bug#0002153: Cant search for patterns containing a forward-slash
 -bug#0002156: CDEF strings are not escaped before passed to rrdtool command
